Add render thread diagnostics